moved crossword style off of h2 into emotionjs css bits to stop style bleed, also because I'm unsure wheat h2/h1 does for SEO purposes

--- a/src/pages/splash.module.css
+++ b/src/pages/splash.module.css
@@ -11,16 +11,10 @@ html {
 }
 
 
-h2 {
-  font-family: "roboto_monoregular", monospace;
-  font-size: 50px;
-  margin: 0;
-  line-height: 41px;
-}
-
 .splashLink {
   text-decoration: none;
   color: #060606;
+  box-shadow: none;
 }
 
 .container {
